# PersonalMonorepo

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  catalog-info.yaml  mkdocs.yml  package-lock.json  renovate.json  result
.github/workflows/: atils-on-merge.yaml  atils-run-ci.yaml  build_flemmarr.yml  custom-containers-base.yaml  custom-containers-local-build-push.yaml  custom-containers-on-merge.yaml  custom-containers-on-push.yaml  custom-containers-run-ci.yaml  helm-chart-run-ci.yaml  helm-charts-on-merge.yaml  toolshed-on-merge.yaml  toolshed-on-push.yaml  toolshed-run-ci.yaml
atils/: .atils_buildconfig.json  .explanation.md  Dockerfile  catalog-info.yaml  flake.nix  mkdocs.yaml  pyproject.toml
atils/atils/: __init__.py  argocd.py  atils.py  atils_kubernetes.py  build.py  config.py  helm.py  jobs.py  kustomize.py  python.py  template_utils.py  test.py  vault.py  yaml_utils.py
atils/atils/command-configurations/: argocd-applications.json  atils.json
atils/atils/common/: config.py  grafana_utils.py  settings.py  settings.yaml  template_utils.py  yaml_utils.py
atils/atils/templates/: kustomization-overlay.yaml  master-app.yaml
atils/docs/: argocd.md  build.md  helm.md  index.md  jobs.md  kubernetes.md  roadmap.md  vault.md
atils/setup/: .explanation
atils/setup/server/: .explanation
atils/tests/: test_yaml.py
atils/tests/files/yaml/: dev_kubeconfig_example.yaml  full_kubeconfig_example.yaml  merged_kubeconfig_example.yaml  no_dev_kubeconfig_example.yaml
atils/wrapper/: .explanation.md
atils/wrapper/languages/: .explanation.md
atils/wrapper/languages/python/: .explanation.md
atils/wrapper/languages/python/implementation/: .explanation.md
atils/wrapper/languages/python/implementation/projectSetup/: .explanation.md  pyproject.toml  steps.md
atils/wrapper/languages/python/implementation/projectSetup/src/projectSetup/: __init__.py
atils/wrapper/languages/python/implementation/pythonInstaller/: .explanation.md  installWrapper.py
atils/wrapper/languages/python/template/: .explanation.md
atils/wrapper/languages/python/template/pythonProject/: .explanation.md  pyproject.toml
custom-images/: TODO  mkdocs.yaml
custom-images/atils-avp/: .atils_buildconfig.json  Dockerfile  config.env
custom-images/atils-ci/: .atils_buildconfig.json  Dockerfile  config.env
docs/: index.md
json-schemas/: atils_buildconfig.json
kubernetes/: catalog-info.yaml
mac-setup/: .zshrc  Brewfile  README.md  TODO  catalog-info.yaml  install-pre-reqs.sh  installs.sh
nix/: configuration.nix
server-setup/: TODO  awsHosts.yml  catalog-info.yaml
toolshed/: .atils_buildconfig.json  app-config.production.yaml  app-config.yaml  catalog-info.yaml
util-scripts/: add-conditions-to-applications.sh  catalog-info.yaml  clear-namespace.sh  mkdocs.yml  pickup-applications.sh
windows-setup/: README.md  chocolatey-application-installs.ps1  desktop-background.ps1  disable-startup-apps.ps1  disable-system-sounds.ps1  manual-mod-backup.json  master-script.ps1  move-user-profile.ps1  setup-default-browser.ps1  setup.ps1  smb-setup.ps1  terminal-settings.json  ultimate-util-config.json  windows-explorer-settings.ps1  windows-terminal.ps1  wsl-setup.ps1
(+1088 files in other folders)
