[project]
name = "atils"
version = "1.5.1"
description = "A series of scripts used to interact and work with this repository."
authors = [{ name = "Aidan Hilt", email = "aidanhilt2@gmail.com" }]
requires-python = "==3.12.*"
readme = "README.md"
dependencies = [
    "mypy>=1.1.1",
    "kubernetes>=33.0.0",
    "argparse>=1.4.0",
    "shutils>=0.1.0",
    "requests>=2.29.0",
    "hvac>=2.0.0",
    "dynaconf>=3.1.12",
    "jinja2>=3.1.2",
    "termcolor>=3.0.0",
    "watchfiles>=1.0.0",
    "setuptools>=80.0.0",
    "colored>=2.2.4",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/AidanHilt/PersonalMonorepo/tree/master/atils"

[project.scripts]
atils = "atils_bin.atils:main"

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "check-jsonschema>=0.33.0,<0.34",
    "types-setuptools>=69.1.0.20240302,<70",
    "types-requests>=2.0.0,<3",
]

[tool.hatch.build.targets.sdist]
include = [
    "atils",
    "atils_bin",
]

[tool.hatch.build.targets.wheel]
include = [
    "atils",
    "atils_bin",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpver]
current_version = "2024.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

[tool.mypy]
ignore_missing_imports = true
