[tool.poetry]
name = "template-project"
version = "0.1.0"
description = "A template for a Python project, that I can use to quickly get other projects started up."
authors = ["Aidan Hilt <aidanhilt2@gmail.com>"]
readme = ".explanation.md"
packages = [{include = "template_project"}]


[tool.poetry.dependencies]
python = "^3.8"
mypy = "0.991"
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
MonkeyType = "22.2.0"
black = "22.12.0"
pytest = "7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
